Document next steps for dataset processing
Added next steps for dataset evaluation and measurement.

--- a/2025.12.06.md
+++ b/2025.12.06.md
@@ -95,6 +95,13 @@
 ### 전체 합(순차 실행)
 - 총 소요: **약 14분 59초** (8:01 + 2:06 + 4:16 + 0:36)
 
+### 다음 진행해야 할 것
+- 일단 고른 데이터셋들 중 OKVQA도 balanced 된 것을 사용해서 시간이 이정도 나오면 전체 데이터셋으로 진행해도 될 것 같음
+- val, test셋도 걸리는 시간 1 epoch 기준으로 측정
+- MOBILE CLIP으로도 측정
+
+
+
 
 
 
